# kagi-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  live-integration.yml  mcp-release.yml  pr-title.yml  release.yml  sdk-publish.yml  security.yml
cli/: README.md
docs/: README.md  endpoint-auth-version-matrix.md  releasing.md
mcp/: Cargo.toml  README.md
mcp/src/: backend.rs  error.rs  lib.rs  main.rs  schema.rs  tests.rs
mcp/src/normalize/: mod.rs  official.rs  session.rs
mcp/tests/: stdio_smoke.rs
scripts/: mcp-release-tag.py  release-publish-decision.py  sdk-release-tag.py
sdk/: Cargo.toml  README.md
sdk/examples/: bot_token.rs  session_token.rs
sdk/src/: auth.rs  boundary.rs  client.rs  config.rs  error.rs  lib.rs  routing.rs  transport.rs
sdk/src/official_api/: mod.rs  models.rs
sdk/src/parsing/: html_search.rs  mod.rs  summarize.rs  summary_stream.rs
sdk/src/session_web/: mod.rs  models.rs
sdk/tests/: live_official.rs  live_session.rs  sdk_integration.rs
sdk/tests/fixtures/: html_search_fixture.html  summary_stream_fixture.txt
