[package]
name = "kagi-mcp"
description = "MCP stdio server for kagi-sdk"
version = "0.1.5"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/kdcokenny/kagi-rs"
homepage = "https://github.com/kdcokenny/kagi-rs"
documentation = "https://docs.rs/kagi-mcp"
rust-version = "1.94"
keywords = ["kagi", "mcp", "server", "search", "rust"]
categories = ["api-bindings", "command-line-utilities"]

[lints]
workspace = true

[dependencies]
kagi-sdk = { path = "../sdk", version = "=0.1.3" }
rmcp = { version = "1.5", features = ["client", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
mockito = "=1.2.0"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
