[package]
name = "kagi-sdk"
description = "Rust-first Kagi SDK with explicit official-api and session-web surfaces"
version = "0.1.2"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/kdcokenny/kagi-rs"
homepage = "https://github.com/kdcokenny/kagi-rs"
documentation = "https://docs.rs/kagi-sdk"
rust-version = "1.94"
keywords = ["kagi", "search", "sdk", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
indexmap = "=2.2.6"

[dev-dependencies]
mockito = "=1.2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
